# ncps-mlx

./: .gitignore  .readthedocs-requirements.txt  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DELETION_ANALYSIS.md  DEPENDENCY_CLEANUP.md  EMBERLINT_REPORT.md  ICRA_IMPLEMENTATION_ANALYSIS.md  MLX_OPERATOR_FIXES_NEEDED.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt  setup.py  testgemini.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/: README.md  conf.py  index.rst  quickstart.rst
docs/api/: index.rst  (+3 more)
examples/: README_lidar_maze.md  __init__.py  atari_cfc.py  atari_ppo.py  atari_tf.py  atari_torch.py  bidirectional.py  cfc_sinusoidal.py  currency_predictor_mlx.py  enhanced_training_example.py  icra_lidar_eval.py  icra_lidar_infer.py  icra_lidar_mlx.py  icra_lidar_pygame.py  infer_states.py  keras_save.py  ltc4_utils.py  maze_env.py  maze_nav_pygame.py  maze_rl_ppo_mlx.py  maze_train_mlx.py  mlx_cell_comparison.py  mlx_cfc_regression.py  mlx_cheetah_training.py  mlx_common.py  mlx_smnist_training.py  model_save_example.py  passenger_predictor_mlx.py  pd_example.py  pt_example.py  pt_implicit.py  save_model.py  sine_example.py  sine_implicit.py  stacking_ncp.py  stock_predictor_mlx.py  temperature_predictor_mlx.py  torch_cfc_sinusoidal.py  wiring_presets.py
misc/: README_EMBERLINT.md  emberlint.py  fix_operators.py
ncps/: __init__.py  wirings.py
ncps_mlx/: __init__.py
tests/: conftest.py  test_examples.py  test_hyperprofiles.py  test_ltcse_family.py  test_mlx.py  test_mlx_cells.py  test_mlx_module_demo.py  test_no_banned_terms.py  test_wirings.py
(+127 files in other folders)
