[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ncps-mlx"
version = "0.1.0"
description = "MLX-native Neural Circuit Policies"
authors = [{name = "NCPS Maintainers"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mlx-core>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
